<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="100dp"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/log_out_sure"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="#e0e0e0"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_positive"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/sure"
                android:textColor="#03A9F4"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="1.5dp"
                android:layout_height="match_parent"
                android:background="#e0e0e0"></LinearLayout>

            <Button
                android:id="@+id/btn_negative"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/cancel"
                android:textColor="#9e9e9e"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>