<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ndroid="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.LoginActivity"
    android:orientation="vertical"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/jd_s_circular_icon"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pur_man"
            android:paddingTop="10dp"
            android:gravity="center"
            android:textSize="20sp"/>
    </LinearLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="0.6"
       android:layout_gravity="center_vertical"
       android:layout_marginLeft="15dp"
       android:layout_margin="15dp"
       android:orientation="vertical">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="40dp"
           android:orientation="horizontal"
           android:background="@drawable/login_bgd_top">

           <ImageView
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="0.2"
               android:src="@drawable/jd_s_account_icon"
               android:gravity="center"
               android:layout_gravity="center"
               />

           <EditText
               android:id="@+id/et_user"
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="0.7"
               android:background="@null"
               android:hint="@string/input_usr"
               android:textColorHint="#bfbfbf"
               android:textSize="15sp"/>
       </LinearLayout>

       <!--<LinearLayout-->
           <!--android:layout_width="match_parent"-->
           <!--android:layout_height="1dp"-->
           <!--android:layout_marginTop="2dp"-->
           <!--android:layout_marginBottom="2dp"-->
           <!--android:background="#bfbfbf">-->
       <!--</LinearLayout>-->

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="40dp"
           android:orientation="horizontal"
           android:layout_marginTop="2dp"
           android:background="@drawable/login_bgd_bottom">

           <ImageView
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:gravity="center"
               android:layout_gravity="center"
               android:src="@drawable/jd_s_password_icon"
               android:layout_weight="0.2"/>

           <EditText
               android:id="@+id/et_pwd"
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="0.7"
               android:background="@null"
               android:hint="@string/input_pwd"
               android:textColorHint="#bfbfbf"
               android:textSize="15sp"/>
       </LinearLayout>

       <Button
           android:id="@+id/btn_login"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:layout_marginTop="30dp"
           android:text="@string/login"
           android:background="@drawable/jd_s_blue_icon"
           android:textColor="#ffffff"
           android:textSize="18sp"/>

   </LinearLayout>
</LinearLayout>
